<?xml version="1.0"?>
<package format="3">
    <name>livox_sdk</name>
    <version>2.3.0</version>
    <description>The livox SDK package.</description>

    <maintainer email="david.b@smartmachine.nz">David B</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
